[package]
name = "nekobot"
version = "0.1.0"
authors = ["Atakku <atakkudev@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", default-features = false, features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "native_tls_backend",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4"
