[package]
name = "nekobot"
version = "0.1.0"
authors = ["Atakku <atakkudev@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", default-features = false, features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "native_tls_backend",
  "unstable_discord_api"
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4"
#diesel = { version="1.4.7", features=["postgres", "serde_json", "r2d2", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"